<resources>
    <string name="app_name">First App</string>
    <string name="welcome">图书馆订座系统</string>
    <string name="username">学号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="orderSeat">预订座位</string>
    <string name="showSeat">寻找空余座位</string>
    <string name="modifyPassword">修改密码</string>
    <string name="report">举报不良行为</string>
    <string name="pleaseSelectService">请选择服务</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>