<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/grey">

    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/pleaseSelectService"
            android:textSize = "54sp"
            android:textColor="#fffff0">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_orderSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderSeat"
            android:textSize="40sp"
            >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_showSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showSeat"
            android:textSize="40sp"
            >
        </Button>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_orderResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="查询预订结果"
                android:textSize="40sp"
                >
            </Button>
        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textSize="40sp"
            >
        </Button>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_quitSeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="放弃当前座位"
                android:textSize="40sp"
                >
            </Button>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        android:background="@drawable/grey"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp">
    </ListView>
</androidx.drawerlayout.widget.DrawerLayout>
